Trained_LSTM_Model

--- a/notes.ipynb
+++ b/notes.ipynb
@@ -226,6 +226,148 @@
     "print(f\"   To $1 Trillion: ${remaining:.1f}B more needed\")\n",
     "print(f\"   Progress: {(current_networth/trillion)*100:.1f}%\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c396d05",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "# Plot training history\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(15, 5))\n",
+    "\n",
+    "axes[0].plot(history.history['loss'], label='Training Loss')\n",
+    "axes[0].plot(history.history['val_loss'], label='Validation Loss')\n",
+    "axes[0].set_title('LSTM Model Loss', fontweight='bold')\n",
+    "axes[0].set_xlabel('Epoch')\n",
+    "axes[0].set_ylabel('Loss')\n",
+    "axes[0].legend()\n",
+    "axes[0].grid(True, alpha=0.3)\n",
+    "\n",
+    "axes[1].plot(history.history['mae'], label='Training MAE')\n",
+    "axes[1].plot(history.history['val_mae'], label='Validation MAE')\n",
+    "axes[1].set_title('LSTM Model MAE', fontweight='bold')\n",
+    "axes[1].set_xlabel('Epoch')\n",
+    "axes[1].set_ylabel('MAE')\n",
+    "axes[1].legend()\n",
+    "axes[1].grid(True, alpha=0.3)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('lstm_training_history.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"\\n✅ LSTM training history saved!\")\n",
+    "Step 4: Compare All Models\n",
+    "pythonprint(\"\\n\" + \"=\" * 70)\n",
+    "print(\"COMPREHENSIVE MODEL COMPARISON\")\n",
+    "print(\"=\" * 70)\n",
+    "\n",
+    "# Compile all metrics\n",
+    "model_comparison = pd.DataFrame({\n",
+    "    'Model': [\n",
+    "        'ARIMA(1,1,1)', \n",
+    "        'Auto ARIMA(0,1,0)', \n",
+    "        'Prophet',\n",
+    "        'LSTM'\n",
+    "    ],\n",
+    "    'RMSE': [\n",
+    "        metrics_111['RMSE'],\n",
+    "        metrics_auto['RMSE'],\n",
+    "        prophet_rmse,\n",
+    "        lstm_rmse\n",
+    "    ],\n",
+    "    'MAE': [\n",
+    "        metrics_111['MAE'],\n",
+    "        metrics_auto['MAE'],\n",
+    "        prophet_mae,\n",
+    "        lstm_mae\n",
+    "    ],\n",
+    "    'MAPE': [\n",
+    "        metrics_111['MAPE'],\n",
+    "        metrics_auto['MAPE'],\n",
+    "        prophet_mape,\n",
+    "        lstm_mape\n",
+    "    ],\n",
+    "    'R²': [\n",
+    "        metrics_111['R2'],\n",
+    "        metrics_auto['R2'],\n",
+    "        prophet_r2,\n",
+    "        lstm_r2\n",
+    "    ]\n",
+    "})\n",
+    "\n",
+    "# Format for display\n",
+    "display_comparison = model_comparison.copy()\n",
+    "display_comparison['RMSE'] = display_comparison['RMSE'].apply(lambda x: f'${x:,.2f}')\n",
+    "display_comparison['MAE'] = display_comparison['MAE'].apply(lambda x: f'${x:,.2f}')\n",
+    "display_comparison['MAPE'] = display_comparison['MAPE'].apply(lambda x: f'{x:.2f}%')\n",
+    "display_comparison['R²'] = display_comparison['R²'].apply(lambda x: f'{x:.4f}')\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "print(display_comparison.to_string(index=False))\n",
+    "\n",
+    "# Find best model by RMSE\n",
+    "best_idx = model_comparison['RMSE'].idxmin()\n",
+    "best_model_name = model_comparison.loc[best_idx, 'Model']\n",
+    "best_rmse = model_comparison.loc[best_idx, 'RMSE']\n",
+    "\n",
+    "print(f\"\\n🏆 Best Individual Model: {best_model_name}\")\n",
+    "print(f\"   RMSE: ${best_rmse:,.2f}\")\n",
+    "print(f\"   MAPE: {model_comparison.loc[best_idx, 'MAPE']:.2f}%\")\n",
+    "Step 5: Visual Comparison of All Models\n",
+    "python# Compare all predictions visually\n",
+    "fig, axes = plt.subplots(2, 1, figsize=(18, 12))\n",
+    "\n",
+    "# Plot 1: Full timeline\n",
+    "axes[0].plot(train_data.index, train_data['TSLA_Adj_Close'], \n",
+    "             label='Training Data', color='#0066cc', linewidth=2, alpha=0.7)\n",
+    "axes[0].plot(test_data.index, test_data['TSLA_Adj_Close'], \n",
+    "             label='Actual Test Data', color='#00cc00', linewidth=3)\n",
+    "axes[0].plot(test_data.index, forecast_111, \n",
+    "             label='ARIMA(1,1,1)', color='#cc0000', linewidth=2, linestyle='--', alpha=0.7)\n",
+    "axes[0].plot(test_data.index, forecast_auto, \n",
+    "             label='Auto ARIMA(0,1,0)', color='#ff6600', linewidth=2, linestyle='--', alpha=0.7)\n",
+    "axes[0].plot(test_data.index, prophet_predictions, \n",
+    "             label='Prophet', color='#9900cc', linewidth=2, linestyle='--', alpha=0.7)\n",
+    "axes[0].plot(test_data.index[seq_length:], lstm_predictions, \n",
+    "             label='LSTM', color='#00cccc', linewidth=2, linestyle='--', alpha=0.7)\n",
+    "\n",
+    "axes[0].axvline(x=train_data.index[-1], color='black', linestyle=':', \n",
+    "                linewidth=2, alpha=0.6, label='Train/Test Split')\n",
+    "axes[0].set_title('All Models: Predictions vs Actual TSLA Stock Price', \n",
+    "                  fontsize=16, fontweight='bold')\n",
+    "axes[0].set_ylabel('TSLA Price ($)', fontsize=12)\n",
+    "axes[0].legend(loc='upper left', fontsize=10, ncol=2)\n",
+    "axes[0].grid(True, alpha=0.3)\n",
+    "\n",
+    "# Plot 2: Test period only (zoomed)\n",
+    "axes[1].plot(test_data.index, test_data['TSLA_Adj_Close'], \n",
+    "             label='Actual', color='#00cc00', linewidth=3, marker='o', markersize=4)\n",
+    "axes[1].plot(test_data.index, forecast_auto, \n",
+    "             label=f'ARIMA ({best_rmse:.0f})', color='#ff6600', \n",
+    "             linewidth=2.5, marker='s', markersize=3, linestyle='--')\n",
+    "axes[1].plot(test_data.index, prophet_predictions, \n",
+    "             label=f'Prophet ({prophet_rmse:.0f})', color='#9900cc', \n",
+    "             linewidth=2.5, marker='^', markersize=3, linestyle='--')\n",
+    "axes[1].plot(test_data.index[seq_length:], lstm_predictions, \n",
+    "             label=f'LSTM ({lstm_rmse:.0f})', color='#00cccc', \n",
+    "             linewidth=2.5, marker='d', markersize=3, linestyle='--')\n",
+    "\n",
+    "axes[1].set_title('Test Period Detail: All Model Predictions', \n",
+    "                  fontsize=14, fontweight='bold')\n",
+    "axes[1].set_xlabel('Date', fontsize=12)\n",
+    "axes[1].set_ylabel('TSLA Price ($)', fontsize=12)\n",
+    "axes[1].legend(loc='best', fontsize=11)\n",
+    "axes[1].grid(True, alpha=0.3)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('all_models_comparison.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"\\n✅ Comprehensive model comparison plot saved!\")"
+   ]
   }
  ],
  "metadata": {
