--- a/notes.ipynb
+++ b/notes.ipynb
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6fa8932",
+   "id": "32be0d3a",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -35,69 +35,15 @@
    },
    "outputs": [],
    "source": [
-    "# Future price forecasting \n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "print(\"=\" * 70)\n",
-    "print(\"STEP 6: FORECASTING TSLA FUTURE PRICES\")\n",
-    "print(\"=\" * 70)\n",
-    "\n",
-    "# Retrain best model on ALL available data for future forecasting\n",
-    "print(\"\\nRetraining best model on complete dataset...\")\n",
-    "final_model = auto_arima(\n",
-    "    merged_data['TSLA_Adj_Close'],\n",
-    "    start_p=0, max_p=3,\n",
-    "    start_q=0, max_q=3,\n",
-    "    d=1,\n",
-    "    seasonal=False,\n",
-    "    trace=False,\n",
-    "    error_action='ignore',\n",
-    "    suppress_warnings=True,\n",
-    "    stepwise=True\n",
-    ")\n",
-    "\n",
-    "print(f\"Final Model: ARIMA{final_model.order}\")\n",
-    "\n",
-    "# Forecast future periods\n",
-    "# Let's forecast 5 years (60 months) into the future\n",
-    "forecast_months = 60\n",
-    "print(f\"\\nForecasting {forecast_months} months into the future...\")\n",
-    "\n",
-    "# Get forecast with confidence intervals\n",
-    "forecast_result = final_model.predict(n_periods=forecast_months, return_conf_int=True)\n",
-    "forecast_values = forecast_result[0]\n",
-    "confidence_intervals = forecast_result[1]\n",
-    "\n",
-    "# Create future date index\n",
-    "last_date = merged_data.index[-1]\n",
-    "future_dates = pd.date_range(start=last_date + pd.DateOffset(months=1), \n",
-    "                              periods=forecast_months, freq='M')\n",
-    "\n",
-    "# Create forecast DataFrame\n",
-    "forecast_df = pd.DataFrame({\n",
-    "    'Date': future_dates,\n",
-    "    'Forecast_Price': forecast_values,\n",
-    "    'Lower_Bound_95': confidence_intervals[:, 0],\n",
-    "    'Upper_Bound_95': confidence_intervals[:, 1]\n",
-    "})\n",
-    "forecast_df.set_index('Date', inplace=True)\n",
-    "\n",
-    "print(\"\\nForecast Summary:\")\n",
-    "print(forecast_df.head(12))  # First year\n",
-    "print(\"...\")\n",
-    "print(forecast_df.tail(12))  # Last year\n",
-    "\n",
-    "# Display key milestones\n",
-    "print(\"\\n\" + \"-\" * 70)\n",
-    "print(\"FORECAST MILESTONES\")\n",
-    "print(\"-\" * 70)\n",
-    "print(f\"Current TSLA Price (Nov 2025): ${merged_data['TSLA_Adj_Close'].iloc[-1]:.2f}\")\n",
-    "print(f\"Forecasted Price (1 year):     ${forecast_df['Forecast_Price'].iloc[11]:.2f}\")\n",
-    "print(f\"Forecasted Price (3 years):    ${forecast_df['Forecast_Price'].iloc[35]:.2f}\")\n",
-    "print(f\"Forecasted Price (5 years):    ${forecast_df['Forecast_Price'].iloc[-1]:.2f}\")\n",
-    "print(f\"\\n95% Confidence Interval (5 years): ${forecast_df['Lower_Bound_95'].iloc[-1]:.2f} - ${forecast_df['Upper_Bound_95'].iloc[-1]:.2f}\")"
+    "Step 1: Retrain ensemble on ALL data (186 months)\n",
+    "Step 2: Generate 5-year forecast (60 months)\n",
+    "Step 3: Calculate TSLA price projections\n",
+    "Step 4: Project Elon's TSLA wealth component\n",
+    "Step 5: Project Other Wealth component (SpaceX, xAI)\n",
+    "Step 6: Calculate total wealth trajectory\n",
+    "Step 7: Determine when $1 TRILLION is reached 🎯\n",
+    "Step 8: Create Bull/Base/Bear scenarios\n",
+    "Step 9: Monte Carlo for confidence intervals"
    ]
   },
   {
@@ -225,148 +171,6 @@
     "print(f\"   Current Net Worth: ${current_networth:.1f}B\")\n",
     "print(f\"   To $1 Trillion: ${remaining:.1f}B more needed\")\n",
     "print(f\"   Progress: {(current_networth/trillion)*100:.1f}%\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3c396d05",
-   "metadata": {},
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "# Plot training history\n",
-    "fig, axes = plt.subplots(1, 2, figsize=(15, 5))\n",
-    "\n",
-    "axes[0].plot(history.history['loss'], label='Training Loss')\n",
-    "axes[0].plot(history.history['val_loss'], label='Validation Loss')\n",
-    "axes[0].set_title('LSTM Model Loss', fontweight='bold')\n",
-    "axes[0].set_xlabel('Epoch')\n",
-    "axes[0].set_ylabel('Loss')\n",
-    "axes[0].legend()\n",
-    "axes[0].grid(True, alpha=0.3)\n",
-    "\n",
-    "axes[1].plot(history.history['mae'], label='Training MAE')\n",
-    "axes[1].plot(history.history['val_mae'], label='Validation MAE')\n",
-    "axes[1].set_title('LSTM Model MAE', fontweight='bold')\n",
-    "axes[1].set_xlabel('Epoch')\n",
-    "axes[1].set_ylabel('MAE')\n",
-    "axes[1].legend()\n",
-    "axes[1].grid(True, alpha=0.3)\n",
-    "\n",
-    "plt.tight_layout()\n",
-    "plt.savefig('lstm_training_history.png', dpi=300, bbox_inches='tight')\n",
-    "plt.show()\n",
-    "\n",
-    "print(\"\\n✅ LSTM training history saved!\")\n",
-    "Step 4: Compare All Models\n",
-    "pythonprint(\"\\n\" + \"=\" * 70)\n",
-    "print(\"COMPREHENSIVE MODEL COMPARISON\")\n",
-    "print(\"=\" * 70)\n",
-    "\n",
-    "# Compile all metrics\n",
-    "model_comparison = pd.DataFrame({\n",
-    "    'Model': [\n",
-    "        'ARIMA(1,1,1)', \n",
-    "        'Auto ARIMA(0,1,0)', \n",
-    "        'Prophet',\n",
-    "        'LSTM'\n",
-    "    ],\n",
-    "    'RMSE': [\n",
-    "        metrics_111['RMSE'],\n",
-    "        metrics_auto['RMSE'],\n",
-    "        prophet_rmse,\n",
-    "        lstm_rmse\n",
-    "    ],\n",
-    "    'MAE': [\n",
-    "        metrics_111['MAE'],\n",
-    "        metrics_auto['MAE'],\n",
-    "        prophet_mae,\n",
-    "        lstm_mae\n",
-    "    ],\n",
-    "    'MAPE': [\n",
-    "        metrics_111['MAPE'],\n",
-    "        metrics_auto['MAPE'],\n",
-    "        prophet_mape,\n",
-    "        lstm_mape\n",
-    "    ],\n",
-    "    'R²': [\n",
-    "        metrics_111['R2'],\n",
-    "        metrics_auto['R2'],\n",
-    "        prophet_r2,\n",
-    "        lstm_r2\n",
-    "    ]\n",
-    "})\n",
-    "\n",
-    "# Format for display\n",
-    "display_comparison = model_comparison.copy()\n",
-    "display_comparison['RMSE'] = display_comparison['RMSE'].apply(lambda x: f'${x:,.2f}')\n",
-    "display_comparison['MAE'] = display_comparison['MAE'].apply(lambda x: f'${x:,.2f}')\n",
-    "display_comparison['MAPE'] = display_comparison['MAPE'].apply(lambda x: f'{x:.2f}%')\n",
-    "display_comparison['R²'] = display_comparison['R²'].apply(lambda x: f'{x:.4f}')\n",
-    "\n",
-    "print(\"\\n\")\n",
-    "print(display_comparison.to_string(index=False))\n",
-    "\n",
-    "# Find best model by RMSE\n",
-    "best_idx = model_comparison['RMSE'].idxmin()\n",
-    "best_model_name = model_comparison.loc[best_idx, 'Model']\n",
-    "best_rmse = model_comparison.loc[best_idx, 'RMSE']\n",
-    "\n",
-    "print(f\"\\n🏆 Best Individual Model: {best_model_name}\")\n",
-    "print(f\"   RMSE: ${best_rmse:,.2f}\")\n",
-    "print(f\"   MAPE: {model_comparison.loc[best_idx, 'MAPE']:.2f}%\")\n",
-    "Step 5: Visual Comparison of All Models\n",
-    "python# Compare all predictions visually\n",
-    "fig, axes = plt.subplots(2, 1, figsize=(18, 12))\n",
-    "\n",
-    "# Plot 1: Full timeline\n",
-    "axes[0].plot(train_data.index, train_data['TSLA_Adj_Close'], \n",
-    "             label='Training Data', color='#0066cc', linewidth=2, alpha=0.7)\n",
-    "axes[0].plot(test_data.index, test_data['TSLA_Adj_Close'], \n",
-    "             label='Actual Test Data', color='#00cc00', linewidth=3)\n",
-    "axes[0].plot(test_data.index, forecast_111, \n",
-    "             label='ARIMA(1,1,1)', color='#cc0000', linewidth=2, linestyle='--', alpha=0.7)\n",
-    "axes[0].plot(test_data.index, forecast_auto, \n",
-    "             label='Auto ARIMA(0,1,0)', color='#ff6600', linewidth=2, linestyle='--', alpha=0.7)\n",
-    "axes[0].plot(test_data.index, prophet_predictions, \n",
-    "             label='Prophet', color='#9900cc', linewidth=2, linestyle='--', alpha=0.7)\n",
-    "axes[0].plot(test_data.index[seq_length:], lstm_predictions, \n",
-    "             label='LSTM', color='#00cccc', linewidth=2, linestyle='--', alpha=0.7)\n",
-    "\n",
-    "axes[0].axvline(x=train_data.index[-1], color='black', linestyle=':', \n",
-    "                linewidth=2, alpha=0.6, label='Train/Test Split')\n",
-    "axes[0].set_title('All Models: Predictions vs Actual TSLA Stock Price', \n",
-    "                  fontsize=16, fontweight='bold')\n",
-    "axes[0].set_ylabel('TSLA Price ($)', fontsize=12)\n",
-    "axes[0].legend(loc='upper left', fontsize=10, ncol=2)\n",
-    "axes[0].grid(True, alpha=0.3)\n",
-    "\n",
-    "# Plot 2: Test period only (zoomed)\n",
-    "axes[1].plot(test_data.index, test_data['TSLA_Adj_Close'], \n",
-    "             label='Actual', color='#00cc00', linewidth=3, marker='o', markersize=4)\n",
-    "axes[1].plot(test_data.index, forecast_auto, \n",
-    "             label=f'ARIMA ({best_rmse:.0f})', color='#ff6600', \n",
-    "             linewidth=2.5, marker='s', markersize=3, linestyle='--')\n",
-    "axes[1].plot(test_data.index, prophet_predictions, \n",
-    "             label=f'Prophet ({prophet_rmse:.0f})', color='#9900cc', \n",
-    "             linewidth=2.5, marker='^', markersize=3, linestyle='--')\n",
-    "axes[1].plot(test_data.index[seq_length:], lstm_predictions, \n",
-    "             label=f'LSTM ({lstm_rmse:.0f})', color='#00cccc', \n",
-    "             linewidth=2.5, marker='d', markersize=3, linestyle='--')\n",
-    "\n",
-    "axes[1].set_title('Test Period Detail: All Model Predictions', \n",
-    "                  fontsize=14, fontweight='bold')\n",
-    "axes[1].set_xlabel('Date', fontsize=12)\n",
-    "axes[1].set_ylabel('TSLA Price ($)', fontsize=12)\n",
-    "axes[1].legend(loc='best', fontsize=11)\n",
-    "axes[1].grid(True, alpha=0.3)\n",
-    "\n",
-    "plt.tight_layout()\n",
-    "plt.savefig('all_models_comparison.png', dpi=300, bbox_inches='tight')\n",
-    "plt.show()\n",
-    "\n",
-    "print(\"\\n✅ Comprehensive model comparison plot saved!\")"
    ]
   }
  ],
